--- a/index.html
+++ b/index.html
@@ -16,49 +16,62 @@
         <li>Subscribe</li>
     </ul>
 </nav>   
+<figure>
+    <img src="./Assets/Main Article Image.png" alt="main">
+    <figcaption>
+        <h1>Weekly Newsletter: Tweets for Higher Engagements</h1>
+        <p>    
+          In this weekly newsletter, we will be covering ten types of engaging tweets. This is the guide if you're just starting out on Twitter.
+        </p>
+        <div>
+            <p>Jessica Andrews</p>
+            <span>Content Manager</span>
+        </div>
+    </figcaption>
+</figure>
 
-<section>
-    <h1>Weekly Newsletter: Tweets for Higher Engagements</h1>
-    <p>    
-      In this weekly newsletter, we will be covering ten types of engaging tweets. This is the guide if you're just starting out on Twitter.
-    </p>
-    <div>
-        <p>Jessica Andrews</p>
-        <span>Content Manager</span>
-    </div>
-</section>
-
-<div>
-    <h3>7 Tips for Organic Traffic</h3>
-    <p>
-        From SEO to integrating with Paid Advertising, this article covers it all.
-    </p>   
-    <div>
-        <p>Spencer David </p>
-        <span>SEO Specialist</span>
-    </div>
-</div>
-<div>
-    <h3>How To Start Your Own Business</h3>
-    <p>
-        Starting your own business in 2021 has never been easier.
-    </p>    
+<figure>
+    <img src="./Assets/Article1Image.png" alt="article 1">
+    <figcaption>
+        <h3>7 Tips for Organic Traffic</h3>
+        <p>
+            From SEO to integrating with Paid Advertising, this article covers it all.
+        </p>   
+        <div>
+            <p>Spencer David </p>
+            <span>SEO Specialist</span>
+        </div>
+    </figcaption>
+</figure>
+<figure>
+    <img src="./Assets/Article2Image.png" alt="article 2">
+    <figcaption>
+        <h3>How To Start Your Own Business</h3>
+        <p>
+            Starting your own business in 2021 has never been easier.
+        </p>    
     
-    <div>
-        <p>Sara Frey</p>
-        <span>Business Leader</span>
-    </div>
-</div>
-<div>
-    <h3>5 Tips for Better Branding</h3>
-    <p>
-        From SEO to integrating with Paid Advertising, this article covers it all.
-    </p>
-    <div>
-        <p>David Suns</p>
-        <span>Brand Manager</span>
-    </div>
-</div>
+        <div>
+            <p>Sara Frey</p>
+            <span>Business Leader</span>
+        </div>
+    </figcaption>
+</figure>
+<figure>
+    <img src="./Assets/Article3Image.png" alt="">
+    <figcaption>
+        <h3>5 Tips for Better Branding</h3>
+        <p>
+            From SEO to integrating with Paid Advertising, this article covers it all.
+        </p>
+        <div>
+            <p>David Suns</p>
+            <span>Brand Manager</span>
+        </div>
+    </figcaption>
+</figure>
+
+
 <footer>
     Unifeed © 2017 All Copyrights Not Reserved 
 </footer>
