--- a/index.html
+++ b/index.html
@@ -4,76 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Unifeed Blog</title>
 </head>
 <body>
-<nav>
-    <img src="./Assets/Logo.svg" alt="logo">
-    <ul>
-        <li>Home</li>
-        <li>Features</li>
-        <li>Pricing</li>
-        <li>Subscribe</li>
-    </ul>
-</nav>   
-<figure>
-    <img src="./Assets/Main Article Image.png" alt="main">
-    <figcaption>
-        <h1>Weekly Newsletter: Tweets for Higher Engagements</h1>
-        <p>    
-          In this weekly newsletter, we will be covering ten types of engaging tweets. This is the guide if you're just starting out on Twitter.
-        </p>
-        <div>
-            <p>Jessica Andrews</p>
-            <span>Content Manager</span>
-        </div>
-    </figcaption>
-</figure>
-
-<figure>
-    <img src="./Assets/Article1Image.png" alt="article 1">
-    <figcaption>
-        <h3>7 Tips for Organic Traffic</h3>
-        <p>
-            From SEO to integrating with Paid Advertising, this article covers it all.
-        </p>   
-        <div>
-            <p>Spencer David </p>
-            <span>SEO Specialist</span>
-        </div>
-    </figcaption>
-</figure>
-<figure>
-    <img src="./Assets/Article2Image.png" alt="article 2">
-    <figcaption>
-        <h3>How To Start Your Own Business</h3>
-        <p>
-            Starting your own business in 2021 has never been easier.
-        </p>    
+<header>
+</header>
+<main>
+    <nav>
+        <img src="./Assets/Logo.svg" alt="logo">
+        <ul>
+            <li>Home</li>
+            <li>Features</li>
+            <li>Pricing</li>
+            <li>Subscribe</li>
+        </ul>
+    </nav>   
+    <figure>
+        <img src="./Assets/Main Article Image.png" alt="main">
+        <figcaption>
+            <h1>Weekly Newsletter: Tweets for Higher Engagements</h1>
+            <p>    
+              In this weekly newsletter, we will be covering ten types of engaging tweets. This is the guide if you're just starting out on Twitter.
+            </p>
+            <div>
+                <p>Jessica Andrews</p>
+                <span>Content Manager</span>
+            </div>
+        </figcaption>
+    </figure>
     
-        <div>
-            <p>Sara Frey</p>
-            <span>Business Leader</span>
-        </div>
-    </figcaption>
-</figure>
-<figure>
-    <img src="./Assets/Article3Image.png" alt="">
-    <figcaption>
-        <h3>5 Tips for Better Branding</h3>
-        <p>
-            From SEO to integrating with Paid Advertising, this article covers it all.
-        </p>
-        <div>
-            <p>David Suns</p>
-            <span>Brand Manager</span>
-        </div>
-    </figcaption>
-</figure>
-
-
+    <figure>
+        <img src="./Assets/Article1Image.png" alt="article 1">
+        <figcaption>
+            <h3>7 Tips for Organic Traffic</h3>
+            <p>
+                From SEO to integrating with Paid Advertising, this article covers it all.
+            </p>   
+            <div>
+                <p>Spencer David </p>
+                <span>SEO Specialist</span>
+            </div>
+        </figcaption>
+    </figure>
+    <figure>
+        <img src="./Assets/Article2Image.png" alt="article 2">
+        <figcaption>
+            <h3>How To Start Your Own Business</h3>
+            <p>
+                Starting your own business in 2021 has never been easier.
+            </p>    
+        
+            <div>
+                <p>Sara Frey</p>
+                <span>Business Leader</span>
+            </div>
+        </figcaption>
+    </figure>
+    <figure>
+        <img src="./Assets/Article3Image.png" alt="">
+        <figcaption>
+            <h3>5 Tips for Better Branding</h3>
+            <p>
+                From SEO to integrating with Paid Advertising, this article covers it all.
+            </p>
+            <div>
+                <p>David Suns</p>
+                <span>Brand Manager</span>
+            </div>
+        </figcaption>
+    </figure>
+</main>
 <footer>
     Unifeed © 2017 All Copyrights Not Reserved 
 </footer>
+<script src="app.js"></script>
 </body>
 </html>
