--- a/task_1.html
+++ b/task_1.html
@@ -27,7 +27,7 @@
                     clone project:
                 </h3>
                 <p>
-                   On CMD type : "<strong>git clone </strong> "https://github.com/ibtihelbs/unifeed"
+                   On CMD type : "<strong>git clone </strong> "https://github.com/ibtihelbs/15_min_challenge0.1"
                 </p>
             </li>
             <li>
@@ -35,7 +35,7 @@
                     go to the generated project directory :
                 </h3>
                 <p>
-                   on cmd type : "cd <strong> unifeed</strong>"
+                   on cmd type : "cd <strong>15_min_challenge0.1</strong>"
                 </p>
             </li>
             <li>
