--- a/task_1.html
+++ b/task_1.html
@@ -54,8 +54,9 @@
                     <li>git init</li>
                     <li>git add .</li>
                     <li>git commit -m "first commit"</li>
+                    <li>git branch -M main(optinal)</li>
                     <li>git remote add origin URL </li>
-                    <li>git push -u origin master</li>
+                    <li>git push -u origin master (or main in case you renamed the default branch master)</li>
                 </ol>
                 <blockquote>
                     these steps are mentioned in the github repository doc
