--- a/task_1.html
+++ b/task_1.html
@@ -73,6 +73,9 @@
             </li>
         </ol>
     </section>
+    <div>
+        <h1>bonus</h1>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
