--- a/task_1.html
+++ b/task_1.html
@@ -75,6 +75,7 @@
     </section>
     <div>
         <h1>bonus</h1>
+        <a href="https://product.hubspot.com/blog/git-and-github-tutorial-for-beginners">git-and-github-tutorial-for-beginners</a>
     </div>
     <script src="app.js"></script>
 </body>
