--- a/tasks/task_5.html
+++ b/tasks/task_5.html
@@ -14,7 +14,7 @@
         tasks:
     </h1>
     <ol>
-        <li>make your website responsive using <a href=""> @media </a> </li>
+        <li>make your website responsive using <a href="https://css-tricks.com/a-complete-guide-to-css-media-queries/"> @media </a> </li>
         <li>commit changes "final"</li>
     </ol>
     <div>
@@ -31,10 +31,9 @@
             </h2>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=2KL-z9A56SQ">Learn how to use CSS Media Queries in less than 5 minutes</a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://www.youtube.com/watch?v=VQraviuwbzU">5 simple tips to making responsive layouts the easy way</a></li>
+                <li><a href="https://www.youtube.com/watch?v=VsNAuGkCpQU">3 modern CSS techniques for responsive design</a></li>
+                
             </ul>
         </div>
     </div>
