--- a/tasks/task_3.html
+++ b/tasks/task_3.html
@@ -42,6 +42,6 @@
             </ol>
         </div>
     </main>
-    <script src="app.js"></script>
+    <script src="../app.js"></script>
 </body>
 </html>
