--- a/tasks/task_1.html
+++ b/tasks/task_1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>day 1 - 15 min coding challenge </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body id="task">
     <header>
@@ -84,6 +84,7 @@
             <a href="https://product.hubspot.com/blog/git-and-github-tutorial-for-beginners">git-and-github-tutorial-for-beginners</a>
         </aside>
     </main>
-    <script src="app.js"></script>
+    <script src="../app.js"></script>
+    <script src="../tasks.js"></script>
 </body>
 </html>
