--- a/tasks/task_5.html
+++ b/tasks/task_5.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../test.module.css">
     <title>task 6</title>
 </head>
 <body>
   <header></header>
   <main>
-    <h1>
-        tasks:
-    </h1>
-    <ol>
-        <li>make your website responsive using <a href="https://css-tricks.com/a-complete-guide-to-css-media-queries/"> @media </a> </li>
-        <li>commit changes "final"</li>
-    </ol>
-    <div>
-        <h1>
-            bonus: 
-        </h1>
-        <ul>
-            <li>add animations to the button on hover</li>
-            <li>scale the cards up 1.2 on hover</li>
-        </ul>
+    <section>
+        <div>
+            <h1>
+                tasks:
+            </h1>
+            <ol>
+                <li>make your website responsive using <a href="https://css-tricks.com/a-complete-guide-to-css-media-queries/"> @media </a> </li>
+                <li>commit changes "final"</li>
+            </ol>
+        </div>
+        <div>
+            <h1>
+                bonus: 
+            </h1>
+            <ul>
+                <li>add animations to the button on hover</li>
+                <li>scale the cards up 1.2 on hover</li>
+            </ul>
+    </section>
         <div>
             <h2>
                 Some Ressources:
