--- a/tasks/task_2.html
+++ b/tasks/task_2.html
@@ -9,7 +9,6 @@
 </head>
 <body id="task">
     <header>
-
     </header>
     <main>
         <section>
@@ -18,53 +17,56 @@
                 <li>Open your project on VScode </li>
                 <li>Start your chrono</li>
                 <li>Create a file "index.html"</li>
-                <li>Generate the By typing ! or html:5 then hit enter</li>
+                <li>Generate html document the By typing ! or html:5 then hit enter</li>
                 <li>add all tags</li>
-                <li>You can expend your knowledge by using a the <a href="">figure</a> and <a href="">figcaption</a> </li>
+                <li>You can expend your knowledge by using a the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/figure">figure</a> and <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/figcaption">figcaption</a> </li>
             </ol>
             <div>
                 <h1>
-                    bonus tasks
+                    bonus tasks : Add meta tags
                 </h1>
                 <ol>
-                    <ins>Add meta tags</ins>
                     <li><a href="https://metatags.io/">metatags</a></li>
                     <li><a href="https://www.seoptimer.com/meta-tag-generator">SEO Optimizer</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=JSm4aQl4w_U">SEO for Developers</a></li>
                 </ol>
                 <ul>
                     <li>
-                        The Best IT and Social Media Blog
-                        —
-                        Social Media Marketing Blog
-                        —
-                        Top Blog for IT and Social Media
+                        <h6>some titles ideas</h6>
+                        <ul>
+                            <li>
+                                The Best IT and Social Media Blog
+                            </li>
+                            <li>
+                                Social Media Marketing Blog
+                            </li>
+                            <li>
+                                Top Blog for IT and Social Media
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        This blog is all about social media and IT. We cover the latest in tech and share our thoughts on trending topics.
+                        <h6>description</h6>
+                        <p>
+                            This blog is all about social media and IT. We cover the latest in tech and share our thoughts on trending topics.
                         IT and social media blog for small business and entrepreneurs with tips, tricks, and reviews on products to help you grow your business
+                        </p>
                     </li>
                 </ul>
             </div>
         </section>
         <section>
             <div>
-                <h3>need some help ??</h3>
+                <h3>resources</h3>
             <ul>
-              <li><a href="">html basic tags</a></li>
-              <li><a href="">semantic tags</a></li>
+              <li><a href="https://medium.com/@zmactavish/30-html-tags-to-know-b0a85b122ded">30 HTML Tags to know</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics">semantic tags</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a">all tags list</a></li>
               <li><a href="https://docs.emmet.io/cheat-sheet/">emmet cheat-sheet</a></li>
+              <li><a href="https://validator.w3.org/#validate_by_uri">W3 validator</a></li>
+              <li><a href="https://www.webfx.com/blog/web-design/20-html-best-practices-you-should-follow/">best practices</a></li>
             </ul> 
             </div> 
-            <div>
-                <h3>
-                    resources
-                </h3>
-                <ol>
-                    <li><a href="https://validator.w3.org/#validate_by_uri">W3 validator</a></li>
-                    <li><a href="https://medium.com/@ibtihelbensalah/html-for-beginners-ee19409c7e01">basic tags</a></li>
-                    <li><a href="https://www.webfx.com/blog/web-design/20-html-best-practices-you-should-follow/">best practices</a></li>
-                </ol>
-            </div>
         </section>
     
     </main>
