--- a/tasks/task_1.html
+++ b/tasks/task_1.html
@@ -58,9 +58,9 @@
                         <li>git init</li>
                         <li>git add .</li>
                         <li>git commit -m "first commit"</li>
-                        <li>git branch -M main(optinal)</li>
+                        <li>git branch -M main(optional)</li>
                         <li>git remote add origin URL </li>
-                        <li>git push -u origin master (or main in case you renamed the default branch master)</li>
+                        <li>git push -u origin master (or main in case you renamed the default branch "master")</li>
                     </ol>
                     </details>
                    
@@ -70,7 +70,7 @@
                     </blockquote>
                 </li>
                 <li>
-                    Go through the project directory:
+                    <h6>Go through the project directory:</h6>
                     <ul>
                         <li>content file</li>
                         <li>style guide file</li>
