--- a/tasks/task_2.html
+++ b/tasks/task_2.html
@@ -12,7 +12,16 @@
     </header>
     <main>
         <section>
-            <h1>Steps:</h1>
+            <h1>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-checklist" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M9.615 20h-2.615a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v8"></path>
+                    <path d="M14 19l2 2l4 -4"></path>
+                    <path d="M9 8h4"></path>
+                    <path d="M9 12h2"></path>
+                 </svg>
+                Steps:
+            </h1>
             <ol>
                 <li>Open your project on VScode </li>
                 <li>Start your chrono</li>
@@ -23,7 +32,13 @@
             </ol>
             <div>
                 <h1>
-                    bonus tasks : Add meta tags
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-gift" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <rect x="3" y="8" width="18" height="4" rx="1"></rect>
+                        <line x1="12" y1="8" x2="12" y2="21"></line>
+                        <path d="M19 12v7a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-7"></path>
+                        <path d="M7.5 8a2.5 2.5 0 0 1 0 -5a4.8 8 0 0 1 4.5 5a4.8 8 0 0 1 4.5 -5a2.5 2.5 0 0 1 0 5"></path>
+                     </svg> <span>bonus tasks : Add meta tags</span>
                 </h1>
                 <ol>
                     <li><a href="https://metatags.io/">metatags</a></li>
